Ensure text remains visible during webfont load

--- a/src/scss/utilities/_fonts.scss
+++ b/src/scss/utilities/_fonts.scss
@@ -1,4 +1,5 @@
 @font-face {
+	font-display: swap;
 	font-family: Raleway;
 	font-style: normal;
 	font-weight: normal;
@@ -6,6 +7,7 @@
 }
 
 @font-face {
+	font-display: swap;
 	font-family: Raleway;
 	font-style: normal;
 	font-weight: 500;
@@ -13,6 +15,7 @@
 }
 
 @font-face {
+	font-display: swap;
 	font-family: Raleway;
 	font-style: normal;
 	font-weight: bold;
